--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,6 +33,12 @@ include_directories("${SPDLOG_INCLUDE_DIR}")
 
 add_library (JSONUtils SHARED ${SOURCES} ${HEADERS})
 
-install (TARGETS JSONUtils DESTINATION lib)
-install (FILES ${HEADERS} DESTINATION include)
+if (ZORAC)
+	install(TARGETS JSONUtils DESTINATION services/cms-import)
+	install(TARGETS JSONUtils DESTINATION services/cms-pusher)
+	install(TARGETS JSONUtils DESTINATION services/cms-getter)
+else()
+	install (TARGETS JSONUtils DESTINATION lib)
+	install (FILES ${HEADERS} DESTINATION include)
+endif()
 
